--- a/themes/fox/source/css/matery.css
+++ b/themes/fox/source/css/matery.css
@@ -2153,3 +2153,26 @@ footer .copy-right {
     padding: 0px;
     margin: 0px;
 }
+
+::-webkit-scrollbar-track-piece {
+    -webkit-border-radius: 0
+  }
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 10px
+  }
+  ::-webkit-scrollbar-thumb {
+    height: 50px;
+    background-color: #b8b8b8;
+    -webkit-border-radius: 6px;
+    outline-offset: -2px;
+    filter: alpha(opacity = 50);
+    -moz-opacity: 0.5;
+    -khtml-opacity: 0.5;
+    opacity: 0.5
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    height: 50px;
+    background-color: #878987;
+    -webkit-border-radius: 6px
+  }
